fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -226,6 +226,7 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  z-index: 10;
   position: fixed;
   top: 0;
   right: -100%;
@@ -447,6 +448,9 @@ textarea::placeholder {
 }
 
 @media (max-width: 465px) {
+  .wrapper {
+    overflow-x: hidden;
+  }
   .selection button {
     width: 100%;
     padding: 1.5rem;
